[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/Item.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Main.gd" type="Script" id=3]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/ShakeCamera2D.gd" type="Script" id=5]
[ext_resource path="res://sounds/pickup.wav" type="AudioStream" id=6]
[ext_resource path="res://sounds/game_over.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/background act1.png" type="Texture" id=8]
[ext_resource path="res://assets/act_1/act1_flower_collision.tres" type="Shape2D" id=9]
[ext_resource path="res://assets/act_1/outside_stuff_tileset.png" type="Texture" id=10]
[ext_resource path="res://assets/act_1/inside_stuff_tileset.png" type="Texture" id=11]

[node name="Main" type="Node2D"]
script = ExtResource( 3 )
Item = ExtResource( 1 )

[node name="BackgroundSprite" type="Sprite" parent="."]
position = Vector2( 288, 512 )
texture = ExtResource( 8 )
region_enabled = true
region_rect = Rect2( 0, 0, 576, 1024 )

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 254, 170.373 )
z_index = 1
MASS = 3423
G = 3558

[node name="ItemTimer" type="Timer" parent="."]

[node name="ItemPosition" type="Position2D" parent="."]
position = Vector2( 288, 0 )

[node name="ShakeCamera2D" type="Camera2D" parent="."]
anchor_mode = 0
rotating = true
current = true
script = ExtResource( 5 )

[node name="QueueTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="ItemPickup" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="GameOver" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="Serene_Village_16x16" type="Sprite" parent="."]
position = Vector2( 411, 808 )
texture = ExtResource( 10 )
region_enabled = true
region_rect = Rect2( 51, 5, 42, 41 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Serene_Village_16x16"]
position = Vector2( 45, -24 )
shape = ExtResource( 9 )

[node name="inside_stuff_tileset" type="Sprite" parent="Serene_Village_16x16"]
position = Vector2( -99, -336 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 11 )
region_enabled = true
region_rect = Rect2( 193, 1057, 13, 21 )
[connection signal="timeout" from="ItemTimer" to="." method="_on_ItemTimer_timeout"]
[connection signal="timeout" from="QueueTimer" to="." method="_on_QueueTimer_timeout"]
